12/17/13 emphasize the '7' tick mark more on the pH scale by using 'Arial black' font family
12/12/13 change color of pH probe image to green, adjust color of pH display to match
12/12/13 change color of pH display to green, change implementation to include optional 'enabled' property
12/12/13 Basics: move pH meter down a bit, so that pH value doesn't go off-screen when pH=15
12/12/13 Basics: tweak layout
12/12/13 Basics: make beaker wider
12/12/13 compute water faucet pipe length based on beaker's right edge
12/12/13 reflect drain faucet, move to left of beaker
12/12/13 ticks on both sides of beaker, tick labels on right
12/12/13 flip volume indicator and move it to right side of beaker
12/12/13 Basics: move 'Reset All' button to lower-right
12/12/13 Basics: show 'Neutral' label in solution when displayed pH='7.00'
12/12/13 Basics: replace button-like '(Neutral) 7' tick with '7', use larger font, use 'neutral' color
# 1.0.0-dev.2 12/11/13
12/11/13 make AB buttons 25% larger
12/11/13 Custom:  add placeholders for zoom buttons in graph
12/11/13 add option to ABSwitch that makes it easier to horizontally center on its button
12/11/13 implement view-specific properties using axon.PropertySet
12/11/13 add view properties for graph switches, add to 'Reset All'
12/11/13 compute scale height and layout of graphs
12/11/13 Custom: add log/linear switch to graph
12/11/13 Solutions: fix reset of beaker controls
12/11/13 Solutions: fix layout problems with pH meter that were caused by flipping
12/11/13 Solutions: flip indicator on pH meter
12/11/13 adjust 'guide' size for graphs
12/11/13 Solutions, Custom: move 'Reset All' button to left of beaker controls
12/11/13 anchor beaker controls to right edge of beaker, so it grows left for i18n
12/11/13 make drain faucet appear is same location for 'Solutions' and 'Custom' screens
12/11/13 adds outline 'guides' for graphs, for use during design/development